--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,8 @@
   align-items: center;
   flex-direction: column;
   height: 100vh;
+  background-image: url('https://daily.jstor.org/wp-content/uploads/2022/06/how_street_dogs_spend_their_days_1050x700.jpg');
+
 }
 
 .auth-container>h1 {
@@ -52,6 +54,7 @@
   border-radius: 4px;
 }
 
+/* -------------navbar styling----- */
 .navbar {
   display: flex;
   justify-content: space-around;
@@ -60,6 +63,49 @@
   background-color: black;
 }
 
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+  background-color: whitesmoke;
+  color: #333;
+  border: 3px solid black;
+  border-radius: 5px;
+  width: 115px;
+  ;
+  text-align: center;
+  font-size: 20px;
+}
+
+a:active {
+  text-decoration: none;
+}
+
+.navbar-Links {
+  color: antiquewhite;
+  background-color: transparent;
+}
+
+.navbar-button-logout:hover {
+  cursor: pointer;
+  text-decoration: none;
+  background-color: transparent;
+  color: antiquewhite;
+  border: 2px solid black;
+  border-radius: 5px;
+  width: 100px;
+  ;
+  text-align: center;
+  font-size: 25px;
+}
+
+/* -------------navbar styling----- */
 .profile-container {
   display: flex;
   flex-direction: column;
@@ -84,6 +130,18 @@
   border: 1px solid rgb(182, 62, 62);
   padding: 10px;
   margin: 5px;
+}
+
+.global-container>h1 {
+  text-align: center;
+}
+
+.global-container>h4 {
+  text-align: center;
+}
+
+.global-container>h5 {
+  text-align: center;
 }
 
 .postglobal-container {
@@ -164,44 +222,58 @@ html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
-.column {
+.about-column {
   float: left;
   width: 33.3%;
   margin-bottom: 16px;
   padding: 0 8px;
 }
 
-.card {
+.about-card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin: 8px;
 }
 
 .about-section {
-  padding: 50px;
+  padding: 150px;
   text-align: center;
-  background-color: antiquewhite;
-  color:#555;
+  /* background-color: antiquewhite; */
+  background-image: url('https://www.humanesociety.org/sites/default/files/2022-07/shelter-dog-575049.jpg');
+  color: #333;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.about-section > h1 {
+  position: relative;
+  right: -250px;
+}
+.about-section > p {
+  position: relative;
+  right: -250px;
 }
 
-.container {
+.about-container {
   padding: 0 16px;
 }
 
-.container::after, .row::after {
+.about-container::after,
+.about-row::after {
   content: "";
   clear: both;
   display: inline-block;
 }
 
-.title {
+.about-title {
   color: grey;
 }
 
-.button {
+.about-button {
   border: none;
   outline: 0;
   display: inline-block;
@@ -213,14 +285,79 @@ html {
   width: 100%;
 }
 
-.button:hover {
+.about-button:hover {
   background-color: #555;
 }
 
 @media screen and (max-width: 650px) {
-  .column {
+  .about-column {
     width: 100%;
     display: block;
+  }
+}
+
+/* ------------anything beyond for Contact.js------ */
+
+.contact-inputs[type=text],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+.contact-input-submit[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.contact-input-submit[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/* Style the container/contact section */
+.contact-container {
+  border-radius: 5px;
+  background-color: antiquewhite;
+  padding: 10px;
+}
+
+.contact-container>div>h2 {
+  color: rgb(38, 78, 81);
+}
+
+.contact-container>div>p {
+  color: #555;
+}
+
+/* Create two columns that float next to eachother */
+.contact-column {
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+  padding: 20px;
+}
+
+/* Clear floats after the columns */
+.contact-row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+
+  .column,
+  input[type=submit] {
+    width: 100%;
+    margin-top: 0;
   }
 }
 
@@ -241,11 +378,11 @@ html {
 } */
 
 
- /* .about-p{ */
-  /* box-sizing: border-box;
+/* .about-p{ */
+/* box-sizing: border-box;
   border: 1px solid #333;
   border-radius: 8px; */
-  /* background-color: antiquewhite; */
+/* background-color: antiquewhite; */
 /* }  */
 
 /* .about-p > p{
