--- a/client/src/App.css
+++ b/client/src/App.css
@@ -75,7 +75,7 @@ a:hover {
   text-decoration: none;
   background-color: whitesmoke;
   color: #333;
-  border: 3px solid black;
+  /* border: 3px solid black; */
   border-radius: 5px;
   width: 115px;
   ;
@@ -109,8 +109,26 @@ a:active {
 .profile-container {
   display: flex;
   flex-direction: column;
-  margin: 0 32px;
+  /* margin: 0 32px; */
+  background-color: antiquewhite;
 }
+
+.profile-container > h1 {
+  text-align: center;
+}
+
+.profile-container > h4 {
+  text-align: center;
+  color: #555;
+}
+
+/* .contact-container>div>h2 {
+  color: rgb(38, 78, 81);
+}
+
+.contact-container>div>p {
+  color: #555;
+} */
 
 .delete-btn {
   background-color: maroon;
@@ -124,30 +142,40 @@ a:active {
 
 .add-btn {
   background-color: cadetblue;
+  margin: 0 auto;
+  display: block;
 }
 
 .global-container {
-  border: 1px solid rgb(182, 62, 62);
-  padding: 10px;
-  margin: 5px;
+  /* border: 1px solid rgb(182, 62, 62); */
+  /* padding: 10px; */
+  /* margin: 5px; */
+  background-color:darkgoldenrod;
 }
 
 .global-container>h1 {
   text-align: center;
+  color: antiquewhite;
 }
 
 .global-container>h4 {
   text-align: center;
+  color: bisque;
 }
 
 .global-container>h5 {
   text-align: center;
+  color:bisque;
 }
 
 .postglobal-container {
   border: 1px solid #333;
   padding: 10px;
   margin: 5px;
+}
+
+.postglobal-container > h3{
+  text-align: center;
 }
 
 .post {
@@ -161,11 +189,12 @@ a:active {
   font-size: 16;
 }
 
-.global-container {
+/* .global-container {
   border: 1px solid rgb(182, 62, 62);
   padding: 10px;
   margin: 5px;
-}
+  background-color: burlywood; */
+/* } */
 
 h1 {
   margin: 5px;
@@ -208,14 +237,11 @@ button {
   font-size: 16px;
 }
 
-.removeDots {
-  list-style-type: none;
-}
-
 /* ---------anything beyond this point is for About.js--- */
 .about {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
+  /* background-color: antiquewhite; */
 }
 
 html {
@@ -238,6 +264,7 @@ html {
 .about-card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin: 8px;
+  background-color: antiquewhite;
 }
 
 .about-section {
@@ -279,15 +306,16 @@ html {
   display: inline-block;
   padding: 8px;
   color: white;
-  background-color: antiquewhite;
+  background-color: white;
   text-align: center;
   cursor: pointer;
   width: 100%;
+  color: black;
 }
 
-.about-button:hover {
+/* .about-button:hover {
   background-color: #555;
-}
+} */
 
 @media screen and (max-width: 650px) {
   .about-column {
@@ -325,7 +353,7 @@ textarea {
 .contact-container {
   border-radius: 5px;
   background-color: antiquewhite;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .contact-container>div>h2 {
@@ -366,6 +394,11 @@ textarea {
   max-width: 300px;
   margin: auto;
   text-align: center;
+  background-color: white;
+}
+
+.profile-card > h4 {
+  color:#555;
 }
 
 .profile-title {
@@ -386,46 +419,160 @@ textarea {
   font-size: 18px;
 }
 
-a {
-  text-decoration: none;
-  font-size: 22px;
-  color: black;
-}
-
 .profile-button:hover, a:hover {
   opacity: 0.7;
 }
 
 /* ---------profile.js - profile card------- */
-
-/* ------------------------------------my own */
-/* .about-container{
-  background-color:antiquewhite;
+/* ------------------------------------------ */
+/* ------------------------------------------------ */
+/* -------community.js pet case car styling------------ */
+.postglobal-card{
+  box-shadow: 0 4px 8px 0 black;
+  /* rgba(0, 0, 0, 0.2) */
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  background-color: white;
 }
 
-.about-img{
+.postgloabl-card > h4 {
+  color:#555;
+}
+
+/* -------community.js pet case car styling------------ */
+
+/* --------postglobal.js comment box styling------- */
+.removeDots {
+  list-style-type: none;
+}
+
+.comment-container {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  background-color: white;
+}
+/* --------postglobal.js comment box styling------- */
+/* ----------footer----------- */
+
+.footer-content {
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    background-color: black;
+    /* background-color: rgb(38, 78, 81); */
+
+}
+
+.footer-content > h2 {
+  color: #ccc;
+  font-family: monospace;
+}
+
+.footer-content p{
+  /* max-width: 500px; */
+  /* margin: 10px auto; */
+  line-height: 28px;
+  font-size: 14px;
+  color: #cacdd2;
+}
+
+.socials{
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem 0 3rem 0;
+}
+.socials  li{
+  margin: 0 10px;
+}
+.socials  a{
+  text-decoration: none;
+  color: antiquewhite;
+  /* border: 1.1px solid white; */
+  padding: 5px;
+  border-radius: 50%;
+}
+.socials  i{
+  font-size: 1.1rem;
+  width: 20px;
+  transition: color .4s ease;
+  font-family: monospace;
+}
+.socials a:hover i{
+  color: black;
+}
+
+.footer-bottom{
+  background: #000;
+  width: 100%;
+  padding: 20px;
+  padding-bottom: 1px;
+  text-align: center;
+}
+
+.footer-bottom p{
+  float: left;
+  font-size: 14px;
+  word-spacing: 2px;
+  text-transform: capitalize;
+}
+.footer-bottom p a{
+ color:#44bae8;
+ font-size: 16px;
+ text-decoration: none;
+}
+.footer-bottom span{
+   text-transform: uppercase;
+   opacity: .4;
+   font-weight: 200;
+}
+
+.footer-menu{
+  float: right;
+  /* background-color: #000; */
+  /* width:100%; */
+  /* text-align: center; */
+}
+
+.footer-menu .f-menu{
+  display: flex;
+}
+
+.footer-menu .f-menu li{
+padding-right: 10px;
+display: block;
+}
+
+.footer-menu .f-menu li .f-menu-a{
+  color: #cfd2d6;
+  text-decoration: none;
+}
+
+.footer-menu .f-menu li .f-menu-a:hover{
+  color: #27bcda;
+}
+
+@media (max-width:500px) {
+  
+  .footer-menu .f-menu{
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+  }
+/* ----------footer----------- */
+
+/* center image */
+/* .about-img{
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 30%;
-} */
+}  */
 
-/* .about-img-container{
-  background-color:antiquewhite;
-} */
-
-
-/* .about-p{ */
-/* box-sizing: border-box;
-  border: 1px solid #333;
-  border-radius: 8px; */
-/* background-color: antiquewhite; */
-/* }  */
-
-/* .about-p > p{
-  text-align: center;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
-  font-weight:lighter;
-} */
-
-/* ---------anything beyond this point is for About.js--- */
