--- a/client/src/App.css
+++ b/client/src/App.css
@@ -54,58 +54,60 @@
   border-radius: 4px;
 }
 
-/* -------------navbar styling----- */
-.navbar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 40px;
-  background-color: black;
-}
-
+/* ----------navbar.js redo------- */
 a:link {
   text-decoration: none;
 }
 
-a:visited {
-  text-decoration: none;
+.menu>li {
+  list-style: none;
 }
 
-a:hover {
-  text-decoration: none;
-  background-color: whitesmoke;
-  color: #333;
-  /* border: 3px solid black; */
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: black;
+  color: #fff;
+}
+
+/* .menu a:link {
+  color: #fff;
+} */
+
+.navbar-Links{
+  color: white;
+}
+
+.logo {
+  font-size: 32px;
+}
+
+.menu {
+  display: flex;
+  gap: 1em;
+  font-size: 18px;
+}
+.menu li:hover{
+  background-color: black;
   border-radius: 5px;
-  width: 115px;
-  ;
-  text-align: center;
-  font-size: 20px;
+  transition:0.3s ease;
 }
-
-a:active {
-  text-decoration: none;
+.menu li{
+  padding: 5px 14px;
 }
-
-.navbar-Links {
-  color: antiquewhite;
-  background-color: transparent;
+/* checkbo hack */
+input[type=checkbox]{
+  display: none;
 }
-
-.navbar-button-logout:hover {
-  cursor: pointer;
-  text-decoration: none;
-  background-color: transparent;
-  color: antiquewhite;
-  border: 2px solid black;
-  border-radius: 5px;
-  width: 100px;
-  ;
-  text-align: center;
-  font-size: 25px;
+.hamburger{
+  display: none;
+  font-size: 24px;
+  user-select: none;
 }
+/* ----------navbar.js redo------- */
 
-/* -------------navbar styling----- */
 .profile-container {
   display: flex;
   flex-direction: column;
@@ -113,11 +115,11 @@ a:active {
   background-color: antiquewhite;
 }
 
-.profile-container > h1 {
+.profile-container>h1 {
   text-align: center;
 }
 
-.profile-container > h4 {
+.profile-container>h4 {
   text-align: center;
   color: #555;
 }
@@ -150,7 +152,7 @@ a:active {
   /* border: 1px solid rgb(182, 62, 62); */
   /* padding: 10px; */
   /* margin: 5px; */
-  background-color:darkgoldenrod;
+  background-color: darkgoldenrod;
 }
 
 .global-container>h1 {
@@ -165,7 +167,7 @@ a:active {
 
 .global-container>h5 {
   text-align: center;
-  color:bisque;
+  color: bisque;
 }
 
 .postglobal-container {
@@ -174,7 +176,7 @@ a:active {
   margin: 5px;
 }
 
-.postglobal-container > h3{
+.postglobal-container>h3 {
   text-align: center;
 }
 
@@ -276,11 +278,13 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.about-section > h1 {
+
+.about-section>h1 {
   position: relative;
   right: -250px;
 }
-.about-section > p {
+
+.about-section>p {
   position: relative;
   right: -250px;
 }
@@ -317,12 +321,12 @@ html {
   background-color: #555;
 } */
 
-@media screen and (max-width: 650px) {
+/* @media screen and (max-width: 650px) {
   .about-column {
     width: 100%;
     display: block;
   }
-}
+} */
 
 /* ------------anything beyond for Contact.js------ */
 
@@ -380,14 +384,14 @@ textarea {
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
 
   .column,
   input[type=submit] {
     width: 100%;
     margin-top: 0;
   }
-}
+} */
 /* ---------profile.js - profile card------- */
 .profile-card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -397,8 +401,8 @@ textarea {
   background-color: white;
 }
 
-.profile-card > h4 {
-  color:#555;
+.profile-card>h4 {
+  color: #555;
 }
 
 .profile-title {
@@ -419,7 +423,8 @@ textarea {
   font-size: 18px;
 }
 
-.profile-button:hover, a:hover {
+.profile-button:hover,
+a:hover {
   opacity: 0.7;
 }
 
@@ -427,7 +432,7 @@ textarea {
 /* ------------------------------------------ */
 /* ------------------------------------------------ */
 /* -------community.js pet case car styling------------ */
-.postglobal-card{
+.postglobal-card {
   box-shadow: 0 4px 8px 0 black;
   /* rgba(0, 0, 0, 0.2) */
   max-width: 300px;
@@ -436,8 +441,8 @@ textarea {
   background-color: white;
 }
 
-.postgloabl-card > h4 {
-  color:#555;
+.postgloabl-card>h4 {
+  color: #555;
 }
 
 /* -------community.js pet case car styling------------ */
@@ -454,26 +459,27 @@ textarea {
   text-align: center;
   background-color: white;
 }
+
 /* --------postglobal.js comment box styling------- */
 /* ----------footer----------- */
 
 .footer-content {
   display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    background-color: black;
-    /* background-color: rgb(38, 78, 81); */
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  background-color: black;
+  /* background-color: rgb(38, 78, 81); */
 
 }
 
-.footer-content > h2 {
+.footer-content>h2 {
   color: #ccc;
   font-family: monospace;
 }
 
-.footer-content p{
+.footer-content p {
   /* max-width: 500px; */
   /* margin: 10px auto; */
   line-height: 28px;
@@ -481,34 +487,38 @@ textarea {
   color: #cacdd2;
 }
 
-.socials{
+.socials {
   list-style: none;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 1rem 0 3rem 0;
 }
-.socials  li{
+
+.socials li {
   margin: 0 10px;
 }
-.socials  a{
+
+.socials a {
   text-decoration: none;
   color: antiquewhite;
   /* border: 1.1px solid white; */
   padding: 5px;
   border-radius: 50%;
 }
-.socials  i{
+
+.socials i {
   font-size: 1.1rem;
   width: 20px;
   transition: color .4s ease;
   font-family: monospace;
 }
-.socials a:hover i{
+
+.socials a:hover i {
   color: black;
 }
 
-.footer-bottom{
+.footer-bottom {
   background: #000;
   width: 100%;
   padding: 20px;
@@ -516,56 +526,89 @@ textarea {
   text-align: center;
 }
 
-.footer-bottom p{
+.footer-bottom p {
   float: left;
   font-size: 14px;
   word-spacing: 2px;
   text-transform: capitalize;
 }
-.footer-bottom p a{
- color:#44bae8;
- font-size: 16px;
- text-decoration: none;
-}
-.footer-bottom span{
-   text-transform: uppercase;
-   opacity: .4;
-   font-weight: 200;
+
+.footer-bottom p a {
+  color: #44bae8;
+  font-size: 16px;
+  text-decoration: none;
 }
 
-.footer-menu{
+.footer-bottom span {
+  text-transform: uppercase;
+  opacity: .4;
+  font-weight: 200;
+}
+
+.footer-menu {
   float: right;
   /* background-color: #000; */
   /* width:100%; */
   /* text-align: center; */
 }
 
-.footer-menu .f-menu{
+.footer-menu .f-menu {
   display: flex;
 }
 
-.footer-menu .f-menu li{
-padding-right: 10px;
-display: block;
+.footer-menu .f-menu li {
+  padding-right: 10px;
+  display: block;
 }
 
-.footer-menu .f-menu li .f-menu-a{
+.footer-menu .f-menu li .f-menu-a {
   color: #cfd2d6;
   text-decoration: none;
 }
 
-.footer-menu .f-menu li .f-menu-a:hover{
+.footer-menu .f-menu li .f-menu-a:hover {
   color: #27bcda;
 }
 
-@media (max-width:500px) {
+@media (max-width: 768px) {
+/* -------------navbar----- */
+  .menu { 
+  display:none;
+  position: absolute;
+  background-color:black;
+  right: 0;
+  left: 0;
+  text-align: center;
+  padding: 16px 0;
+  }
   
-  .footer-menu .f-menu{
-    display: flex;
-    margin-top: 10px;
-    margin-bottom: 20px;
+  .menu li:hover {
+  display: inline-block;
+  background-color:black;
+  transition: 0.3s ease;
   }
+  
+  .menu li + li {
+  margin-top: 12px;
   }
+  
+  input[type=checkbox]:checked ~ .menu{
+  display: block;
+  }
+  
+  .hamburger {
+  display: block;
+  }
+/* -------------navbar----- */
+/* ---------about.js--------- */
+/* ---------about.js--------- */
+
+.footer-menu .f-menu{
+  display: flex;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+}
 /* ----------footer----------- */
 
 /* center image */
@@ -575,4 +618,3 @@ display: block;
   margin-right: auto;
   width: 30%;
 }  */
-
